# 2fa-desktop-app

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
docs/: index.html
scripts/: release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs  tray.rs
src-tauri/src/api/: client.rs
src-tauri/src/commands/: accounts.rs  credentials.rs  mod.rs  otp.rs  qrcode.rs  screenshot.rs
src-tauri/src/crypto/: encryption.rs
src-tauri/src/models/: types.rs
src/components/: connection-status.tsx  countdown-ring.tsx  drop-zone.tsx  otp-code.tsx  scan-overlay.tsx  service-icon.tsx  update-checker.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  scroll-area.tsx  tabs.tsx
src/hooks/: use-clipboard.ts  use-otp-timer.ts  use-window-label.ts
src/lib/: constants.ts  tauri-commands.ts
src/stores/: accounts-store.ts  connection-store.ts  ui-store.ts
src/types/: index.ts
src/views/main-window/: account-item.tsx  accounts-screen.tsx  index.tsx  setup-screen.tsx  welcome-screen.tsx
src/views/main-window/add-account/: index.tsx  manual-tab.tsx  qr-tab.tsx  screen-capture-tab.tsx  uri-tab.tsx
src/views/tray-popup/: index.tsx  tray-account-item.tsx  tray-footer.tsx
